--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,11 +1,13 @@
 <nav>
   <ul>
     <li><%= link_to "PrivateEvents", root_path %></li>
-    <% if user_signed_in? %>
-      <li><%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete } %></li>
-    <% else %>
-      <li><%= link_to "Sign Up", new_user_registration_path %></li>
-      <li><%= link_to "Log in", new_user_session_path %></li>
-    <% end %>
+    <div class="sessions">
+      <% if user_signed_in? %>
+        <li><%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete } %></li>
+      <% else %>
+        <li><%= link_to "Log in", new_user_session_path %></li>
+        <li><%= link_to "Sign Up", new_user_registration_path %></li>
+      <% end %>
+    </div>
   </ul>
 </nav>
