Complete event crud

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,21 +1,1 @@
-<%= form_with model: @event do |form| %>
-  <div class="field">
-    <%= form.label :title, "Title" %>
-    <%= form.text_field :title %>
-  </div>
-  <div class="field">
-    <%= form.label :description, "Description" %>
-    <%= form.text_area :description, size: "60x5" %>
-  </div>
-  <div class="field">
-    <%= form.label :location, "Location" %>
-    <%= form.text_field :location %>
-  </div>
-  <div class="field">
-    <%= form.label :date_time, "Day & time" %>
-    <%= form.datetime_local_field :date_time %>
-  </div>
-  <div class="actions">
-    <%= form.submit "Create" %>
-  </div>
-<% end %>
+<%= render partial: "events/event_form", locals: {event: @event, submitText: "Create"} %>
