--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,6 +3,7 @@
     <li><%= link_to "PrivateEvents", root_path %></li>
     <div class="sessions">
       <% if user_signed_in? %>
+      <li><%= link_to "Account", user_path %></li>
         <li><%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete } %></li>
       <% else %>
         <li><%= link_to "Log in", new_user_session_path %></li>
