--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,4 @@
 <%= link_to "Create new event", new_event_path %>
-
-<%= render @events %>
+<div class="container">
+  <%= render @events %>
+</div>
